# backrooms-sim

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PROGRESS.md  README.md  vcpkg.json
.claude/: settings.json
_brainstorm/GLM/: 00_INDEX.md  01_RTX_RENDERING_EFFICIENCY.md  02_RTX_CRASH_ROOT_CAUSE.md  03_AI_SHOGGOTH_BRAINSTORM.md  04_AI_INTEGRATION_PACKAGING.md  05_AGENT_FINDINGS_RAW.md
_brainstorm/TurboScribe Export 1483246579/: Coding Adventure More Ray Tracing!.txt  Coding Adventure Ray Tracing.txt  Coding Adventure Ray-Tracing Glass.txt
_run_state/: AUTOSTART.md  AUTOSTART_SETUP.md  CONTINUE.md  INIT_PROMPT.md  REHYDRATE.md  ROADMAP.md
_staged_phase2b_backup/app/src/: main.cpp
_staged_phase2b_backup/render_d3d12/: MODULE.md
_staged_phase2b_backup/render_d3d12/include/render_d3d12/: renderer.h
_staged_phase2b_backup/render_d3d12/src/: renderer.cpp
_staged_phase2b_backup/render_dxr/include/render_dxr/: dxr.h
_staged_phase2b_backup/render_dxr/src/: dxr.cpp
_staged_phaseC2_backup/app/src/: director_chat.h  director_vision.h
_staged_phaseC2_backup/tests/unit/: test_keel_scheduler.cpp
_staged_rt_perf_A/: APPLY_ORDER.md  APPLY_PROMPT.txt  CHANGESET.md
_staged_rt_perf_B/: CHANGESET.md
_staged_rt_perf_ghost/: CHANGESET.md
_staged_rt_reproj_backup/: dxr.cpp  main.cpp
_staged_rt_sampling_backup/: dxr.cpp
app/: CMakeLists.txt  MODULE.md  version.rc
app/src/: base64.h  config.h  director_chat.h  director_vision.h  flares.h  gamepad.h  head_bob.h  hud.cpp  hud.h  keel_broker.h  keel_scheduler.h  ladder.h  main.cpp  menu.h  mic_capture.h  shoggoth.h  shoggoth_body.h  shoggoth_brain.h  shoggoth_brain_host.h  shoggoth_hearing.h  shoggoth_vision.h  shoggoth_vision_host.h  tts.h
audio/: CMakeLists.txt  MODULE.md
audio/include/audio/: audio.h  device.h  engine.h  ring.h  room_probe.h  synth.h  wav.h
audio/src/: audio.cpp  device.cpp  engine.cpp  room_probe.cpp  synth.cpp
contracts/: README.md  audio_events_v1.h  chunk_gen_v1.h  director_v1.h  geometry_v1.h  replay_v1.h  stream_events_v1.h  telemetry_v1.h  world_view_v1.h
core/: CMakeLists.txt  MODULE.md
core/include/core/: aabb.h  lighting.h  math.h  replay.h  rng.h  version.h  world.h
core/src/: lighting.cpp  replay.cpp  version.cpp  world.cpp
director/: CMakeLists.txt  MODULE.md
director/include/director/: director.h  host.h  json.h  keel_client.h
director/src/: director.cpp  host.cpp  json.cpp  keel_client.cpp
docs/: APPARITION_SENSE.md  ARCHITECTURE.md  AUDIT_2026-06-15.md  CHANGE_AUDIT_LOG.md  DECISIONS.md  DESIGN.md  ITCH_PAGE.md  ITCH_PUBLISH.md  KEEL_INTEGRATION.md  KICKOFF_PROMPT.md  MILESTONES.md  PACKAGING_PROPOSAL.md  PROJECT_STATE.md  RT_4K_OPTIMIZATION_REPORT.md  RT_PERF_PLAN.md  RUN_LOG_2026-06-15.md  SESSION_LOG.md  SHOGGOTH_PLAN.md  TODO_director_vision.md  USER_GUIDE.md
goldens/: README.md
licenses/: THIRD-PARTY-LICENSES.txt
render_d3d12/: CMakeLists.txt  MODULE.md
render_d3d12/include/render_d3d12/: render_d3d12.h  renderer.h  texgen.h
render_d3d12/src/: render_d3d12.cpp  renderer.cpp  texgen.cpp
render_dxr/: CMakeLists.txt  MODULE.md
render_dxr/include/render_dxr/: dxr.h  render_dxr.h
render_dxr/src/: dxc.cpp  dxc.h  dxr.cpp  render_dxr.cpp
scripts/: audit.ps1  autoloop.ps1  build.ps1  gate.ps1  install-hooks.ps1  keel-down.ps1  keel-up.ps1  make_scr.cmake  package.ps1  precommit.ps1  quickcheck.ps1  rehydrate.ps1  run.ps1  soak.ps1  vision_probe.ps1
scripts/checks/: check_contracts.ps1  check_core_isolation.ps1  check_inventory.ps1
scripts/lib/: common.ps1
stream/: CMakeLists.txt  MODULE.md
stream/include/stream/: stream.h  stream_manager.h
stream/src/: stream.cpp  stream_manager.cpp
telemetry/: CMakeLists.txt  MODULE.md
telemetry/include/telemetry/: crash.h  csv.h  telemetry.h
telemetry/src/: crash.cpp  csv.cpp  telemetry.cpp
tests/: CMakeLists.txt
tests/gate/: test_canary.cpp
tests/unit/: test_audio.cpp  test_biome.cpp  test_chunk.cpp  test_collision.cpp  test_config.cpp  test_director.cpp  test_gamepad.cpp  test_headbob.cpp  test_keel_scheduler.cpp  test_layout.cpp  test_menu.cpp  test_rng.cpp  test_shoggoth.cpp  test_sim.cpp  test_smoke.cpp  test_stream.cpp  test_texgen.cpp
tools/: CMakeLists.txt  MODULE.md
tools/common/: stb_impl.cpp
tools/contactsheet/: main.cpp
tools/goldgen/: main.cpp
tools/hashdiff/: main.cpp
tools/icongen/: main.cpp
tools/wavcheck/: main.cpp
